--- a/web_app/requirements.txt
+++ b/web_app/requirements.txt
@@ -7,6 +7,8 @@ python-dotenv==1.0.1
 huggingface-hub==0.20.3
 torch==2.1.2
 transformers==4.37.2
-numpy
+numpy==1.26.4
+tokenizers==0.15.1
 sentencepiece
 protobuf
+safetensors
